--- a/src/Header/Header.scss
+++ b/src/Header/Header.scss
@@ -7,11 +7,10 @@
   display: flex;
   flex-direction: column;
   height: 100vh;
-  min-width: 350px;
+  min-width: 320px;
   padding: 20px;
+  overflow-y: scroll;
   background-color: $white-40;
-  /*resize: horizontal;
-  overflow-x: scroll;*/
 }
 
 .person-header {
