--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,14 @@
 .App {
-  padding: 50px;
+  display: flex;
+}
+
+.background-screen_img {
+  position: absolute;
+  z-index: -1;
+  left: 0;
+  top: 0;
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
