--- a/src/assets/styles/null.scss
+++ b/src/assets/styles/null.scss
@@ -105,6 +105,6 @@ html, body {
   min-height: 100vh;
   width: 100vw;
   margin: 0;
-  background-color: $mainColor;
+  //background-color: $mainColor;
   color: $mainColorText;
 }
