--- a/src/assets/components/TransBtn/TransBtn.scss
+++ b/src/assets/components/TransBtn/TransBtn.scss
@@ -14,7 +14,8 @@
   }
 
   &:disabled {
-    background-color: $grey;
+    border: 1px solid $grey;
+    background-color: transparent;
     color: $grey;
   }
 
