--- a/src/Main/Newsletter/Newsletter.scss
+++ b/src/Main/Newsletter/Newsletter.scss
@@ -1,10 +1,13 @@
 @import "../../assets/styles/variables";
 
 .email-newsletter {
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
   height: 100%;
-  width: 80%;
-  margin: 0 auto;
-  padding: 100px 0 50px 0;
+  padding: 100px 10% 50px 10%;
+  backdrop-filter: blur(2px);
+  overflow-y: auto;
 }
 
 .email-newsletter__option {
@@ -18,7 +21,7 @@
 }
 
 .email-newsletter__option_label {
-  display: flex;
+  display: inline-flex;
   align-items: center;
 }
 
@@ -27,12 +30,32 @@
 }
 
 
-
+.email-newsletter__cover {
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
+  visibility: hidden;
+  display: block;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background-color: $black-80;
+  transition: all 0.1s ease;
+  &.active {
+    z-index: 1;
+    opacity: 1;
+    visibility: visible;
+  }
+}
 
 .select-role {
   position: relative;
+  z-index: 2;
   display: inline-block;
+  min-width: 455px;
 }
+
 
 .select-role_icon {
   position: absolute;
@@ -46,11 +69,18 @@
 
 .select-role__title {
   position: relative;
+  display: inline-block;
   padding: 15px 50px 15px 25px;
-  background-color: $white-30;
-}
-
-.h4 {
+  transition: background-color 0.3s ease;
+  img {
+    transition: transform 0.3s ease;
+  }
+  &.active {
+    background-color: $white-80;
+    img {
+      transform: rotate(180deg) translateY(50%);
+    }
+  }
 }
 
 .select-role__list {
@@ -59,15 +89,22 @@
   display: block;
   width: 100%;
   height: fit-content;
-  bottom: 0;
   top: 100%;
+  left: 0;
   padding-bottom: 5px;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.3s ease;
+  &.active {
+    opacity: 1;
+    visibility: visible;
+  }
 }
 
 .select-role__item {
   padding: 12px 0 12px 83px;
-  background-color: $white-30;
+  background-color: $white-80;
   &:nth-child(2n + 1) {
-    background-color: $white-40;
+    background-color: $white-60;
   }
 }
