--- a/src/Main/Sidebar/Sidebar.scss
+++ b/src/Main/Sidebar/Sidebar.scss
@@ -1,4 +1,4 @@
-@import "../assets/styles/variables";
+@import "../../assets/styles/variables";
 
 .header {
   position: absolute;
@@ -14,13 +14,16 @@
   backdrop-filter: blur(15px);
   transform: translate(-100%, 0);
   transition: transform 0.3s ease;
+
   .header-resizable {
     opacity: 0;
     visibility: hidden;
   }
+
   &.active {
     position: relative;
     transform: translate(0, 0);
+
     .header-resizable {
       opacity: 1;
       visibility: visible;
@@ -36,6 +39,7 @@
   display: block;
   width: 37px;
   height: 22px;
+
   span {
     display: block;
     height: 2px;
@@ -45,38 +49,45 @@
     left: 0;
     transition: all 0.3s ease;
   }
+
   span:first-child {
     width: 100%;
     top: 0;
   }
+
   span:nth-child(2) {
     width: 100%;
     top: 50%;
     transform: translate(0, -50%);
   }
+
   span:last-child {
     width: 60%;
     bottom: 0;
   }
+
   &.active {
     span:first-child {
       width: 100%;
       top: 50%;
       transform: translate(0%, -50%) rotate(-45deg);
     }
+
     span:nth-child(2) {
       opacity: 0;
     }
+
     span:last-child {
       width: 100%;
       top: 50%;
       transform: translate(0%, -50%) rotate(45deg);
     }
   }
+
   @media (hover: hover) {
-      &:hover {
-          cursor: pointer;
-      }
+    &:hover {
+      cursor: pointer;
+    }
   }
 }
 
@@ -126,9 +137,9 @@
   height: 28px;
   background: url("./img/resizable-icon.png") no-repeat center center / contain;
   @media (hover: hover) {
-      &:hover {
-          cursor: e-resize;
-      }
+    &:hover {
+      cursor: e-resize;
+    }
   }
 }
 
@@ -190,40 +201,6 @@
   }
 }
 
-.header__nav {
-  flex: 1 1 auto;
-}
-
-.bottom-header {
-  padding: 10px 0 0 0;
-  border-top: 1px solid $black;
-}
-
-.bottom-header__list {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.bottom-header__item {
-}
-
-.bottom-header__link {
-  font-size: 30px;
-  color: $black;
-  @media (hover: hover) {
-    transition: all 0.3s ease;
-    &:hover {
-      color: $orange;
-    }
-  }
-}
-
-.navigation {
-  display: flex;
-  flex-direction: column;
-}
-
 .navigation__search {
   display: flex;
   margin-bottom: 20px;
@@ -235,15 +212,6 @@
   font-size: 30px;
   background-color: $black-80;
   padding: 5px 10px 5px 10px;
-}
-
-.navigation__project {
-}
-
-.project-nav {
-  flex: 1 1 auto;
-  display: flex;
-  flex-direction: column;
 }
 
 .project-nav__header {
@@ -266,7 +234,12 @@
     display: block;
   }
 
+  a:before {
+    color: $black;
+  }
+
   span {
+    color: $black;
     margin-left: 10px;
   }
 }
