--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -7,6 +7,7 @@ $black-50: rgba(18, 17, 17, 0.5);
 $grey: #6f6f6f;
 $white: #ffffff;
 $white-80: rgba(255, 255, 255, 0.8);
+$white-60: rgba(255, 255, 255, 0.6);
 $white-40: rgba(255, 255, 255, 0.4);
 $white-30: rgba(255, 255, 255, 0.3);
 $green: #38d900;
